--- a/css/styles.css
+++ b/css/styles.css
@@ -92,10 +92,26 @@ body {
   margin-top: 5rem;
   position: relative;
 }
+
+.game__title {
+  font-size: 4rem;
+  text-transform: uppercase;
+  margin: 0;
+  padding-left: 1.2rem;
+  padding-top: 4.7rem;
+}
+
+.reg {
+  font-family: verdana, sans-serif;
+  font-size: 1.8rem;
+  margin-left: -1rem;
+  vertical-align: top;
+}
 /**********************************/
 /* 3.1 Pads
 /**********************************/
 .game__pad {
+  border: var(--game-border);
   width: calc(var(--game-size) / 2);
   height: calc(var(--game-size) / 2);
 }
@@ -155,7 +171,116 @@ body {
 /**********************************/
 /* 3.2.1 GUI
 /**********************************/
+.gui {
+  padding-left: 1.5rem;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-end;
+}
 
+.group {
+  margin-right: 2.2rem;
+}
+
+.group-large {
+  display: flex;
+  width: 10rem;
+  margin-left: 4.5rem;
+}
+
+.gui__label {
+  font-family: 'Arima Madurai', cursive;
+  font-weight: bold;
+  font-size: 0.75rem;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.gui__label--switch {
+  margin: 0;
+  padding-top: 0.75rem;
+}
+
+.gui__btn {
+  width: 2.5rem;
+  height: 2.5rem;
+  margin-left: 0.2rem;
+  border-radius: 5rem;
+  box-shadow: 0 0.2rem 0.3rem #222;
+  border: 0.4rem solid #444;
+  cursor: pointer;
+}
+
+.gui__btn:active {
+  transform: translate(0, 0.3rem);
+  box-shadow: none;
+}
+
+.gui__btn--start {
+  background-color: red;
+}
+
+.gui__btn--strict {
+  background-color: yellow;
+}
+
+.gui__btn-switch {
+  background-color: #222;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+  width: 5rem;
+  height: 2.3rem;
+  border-radius: 0.3rem;
+  cursor: pointer;
+}
+
+.gui__btn-switch::before {
+  content: '';
+  background-color: var(--clr-switch);
+  display: block;
+  position: relative;
+  left: 2.5rem;
+  width: 2.2rem;
+  height: 1.9rem;
+  border-radius: 0.3rem;
+  border: 0.2rem solid #333;
+}
+
+.gui__btn-switch--on::before {
+  left: 0;
+}
+
+.gui__counter {
+  background-color: var(--clr-counter-bg);
+  color: var(--clr-counter-off);
+  font-family: 'Iceland', cursive;
+  font-weight: bold;
+  font-size: 3rem;
+  text-align: right;
+  width: 5.5rem;
+  border: 0.3rem solid #000;
+  border-radius: 1rem;
+  padding-right: 0.3rem;
+  padding-left: 0.3rem;
+}
+
+.gui__counter--on {
+  color: var(--clr-counter-on);
+}
+
+.gui__led {
+  background-color: #32050c;
+  margin-left: 1rem;
+  margin-bottom: 0.5rem;
+  width: 0.8rem;
+  height: 0.8rem;
+  border: 0.2rem solid #222;
+  border-radius: 2rem;
+}
+
+.gui__led--active {
+  background-color: red;
+}
 /**********************************/
 /* 4. Footer
 /**********************************/
